# Kinetia

./: .env.example  .gitignore  netlify.toml  package.json  pnpm-lock.yaml  tsconfig.base.json  vercel.json
apps/web/: next.config.ts  package.json  tailwind.config.ts  tsconfig.json  vercel.json
apps/web/src/: middleware.ts
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/presets/: page.tsx
apps/web/src/app/projects/: page.tsx
apps/web/src/app/train/: page.tsx
apps/web/src/components/animation-preview/: AnimationPreview.tsx
apps/web/src/stores/: preset-store.ts  project-store.ts
plugins/: package-plugin.sh
plugins/ae-kinetia/: README.md  index.html
plugins/ae-kinetia/CSXS/: manifest.xml
plugins/ae-kinetia/css/: panel.css
plugins/ae-kinetia/js/: CSInterface.js  panel.js
plugins/ae-kinetia/jsx/: kinetia.jsx
plugins/ae-plugin/: CMakeLists.txt
plugins/ae-plugin/panel/: index.html  panel.css  panel.js
plugins/ae-plugin/src/: CompositionBuilder.cpp  CompositionBuilder.h  ExpressionInjector.cpp  ExpressionInjector.h  KinetiaPlugin.cpp  KinetiaPlugin.h  MicroJsonParser.cpp  MicroJsonParser.h  PrecompManager.cpp  PrecompManager.h
supabase/: config.toml
supabase/.temp/: pooler-url  project-ref
supabase/functions/analyze-video/: index.ts
supabase/functions/generate-expression/: index.ts
supabase/functions/guide-preset/: index.ts
supabase/functions/parse-layers/: index.ts
supabase/migrations/: 20260412000001_initial_schema.sql  20260413000001_nullable_project_fields.sql  20260413000002_fix_rls_policies.sql  20260413000003_storage_policies.sql  20260413000004_increase_storage_limit.sql  20260413000005_storage_mime_types.sql  20260413000006_storage_files_policy.sql  20260413000007_layer_mappings_unique.sql  20260417000001_v2_schema.sql
(+11 files in other folders)
